--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "ethereum-waffle": "^3.1.0",
     "ethers": "^5.0.14",
     "mocha": "^8.1.3",
+    "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.57"
   },
   "scripts": {
     "build": "waffle",
+    "clean-meta": "./do-not-commit/clean-meta.sh",
     "test": "mocha --timeout 10000"
-  }
+  },
+  "pre-commit": [
+    "clean-meta"
+  ]
 }
