--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -5,7 +5,7 @@ on:
       - master
 defaults:
   run:
-    working-directory: client
+    working-directory: client-ts
 
 jobs:
   gh-pages-deploy:
@@ -14,8 +14,6 @@ jobs:
     steps:
       - name: Setup Node.js for use with actions
         uses: actions/setup-node@v1.4.2
-        with:
-          version: 10.x
 
       - name: Checkout branch
         uses: actions/checkout@v2.1.1
