--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "CI= GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gh-pages-deploy": "node --max_old_space_size=8192 scripts/gh-pages-deploy.js"
   },
   "eslintConfig": {
     "extends": "react-app"
