--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -54,6 +54,9 @@
     "@types/styled-components": "^5.1.3",
     "@types/web3": "^1.2.2",
     "react-circular-progressbar": "^2.0.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "chalk": "latest",
+    "execa": "latest",
+    "node-emoji": "latest"
   }
 }
