--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2.1.1
 
       - name: Clean install dependencies
-        run: yarn install --frozen-lockfile --network-concurrency 1
+        run: yarn install
 
       - name: Run deploy script
         run: |
